--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/standalone": "^7.28.5",
     "@mantine/core": "^8.3.9",
     "@mantine/hooks": "^8.3.9",
+    "@monaco-editor/react": "^4.7.0",
     "@tabler/icons-react": "^3.35.0",
     "classnames": "^2.5.1",
     "markdown-to-jsx": "^9.1.1",
@@ -24,6 +26,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/babel__standalone": "^7.1.9",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
