--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate:editor-types": "node scripts/generate-editor-types.js"
   },
   "dependencies": {
     "@babel/standalone": "^7.28.5",
