--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "generate:editor-types": "node scripts/generate-editor-types.js"
+    "generate:editor-types": "node scripts/generate-editor-types.js",
+    "generate:component-sources": "node scripts/generate-component-sources.js"
   },
   "dependencies": {
     "@babel/standalone": "^7.28.5",
